# KMMS_prog

./: .gitignore
01.03.26 - LongNumbers/: build.sh
01.03.26-LongNumbers/projects/LN/src/: LongNumber.cpp
01.03.26-LongNumbers/projects/LN/test/: test_LN.cpp
03.05.26 - Mario_before_ref/: app  build.sh  main.cpp  mario
03.10.25 - cpp_compilation/: build.sh  build_run_detailed.bat
03.10.25_cpp_compilation/: build_run.bat  example
03.12.25 - class_menu/: menu.cpp  menu_items.cpp
03.12.25.class_menu/: example  menu_func.cpp  menu_func.hpp  menu_items.hpp
06.12.25 - menu/: menu_func.cpp
10.01.25 - home_refactoring/: lis.cpp
14.03.26 - vector_list/: CMakeLists.txt  build.sh
14.03.26 - vector_list/src/: CMakeLists.txt  doubly_linked_list.cpp  doubly_linked_list.hpp  vector.cpp  vector.hpp
14.03.26 - vector_list/test/: CmakeLists.txt  templates_doubly_linked_list.cpp  templates_vector.cpp  test_doubly_linked_list.cpp  test_vector.cpp
16.12.25 - CMake_menu/: build.sh
16.12.25 - CMake_menu/projects/sort/src/: bubble_sort.cpp
16.12.25 - CMake_menu/projects/sort/test/: test_bubble.cpp
16.12.25-CMake_menu/projects/: CMakeLists.txt
16.12.25-CMake_menu/projects/obuchaika/: CMakeLists.txt
16.12.25-CMake_menu/projects/sort/: CMakeLists.txt
16.12.25-CMake_menu/projects/sort/src/: bubble_sort.hpp
16.12.25-CMake_menu/projects/sort/test/: CMakeLists.txt
17.10.25 - refactoring/: after_refactoring  after_refactoring_2.cpp
20.09.25 - module_app/: io.cpp
20.09.25_module_app/: io.hpp  main.cpp  sortings.cpp
2025_09_20_module_app/: bubble_sort  build_run_module_app.bat  io.cpp  main.cpp  sortings.cpp  sortings.hpp
25-01-01.home_refactoring/: LIS.cpp  LIS.hpp  build_module_app.sh  io.cpp  io.hpp  lis.cpp  main  main.cpp
25-01-10.home_refactoring/: io.cpp  io.hpp  lis.hpp  lis_example  main  main.cpp
25-01-10.home_refactoring/lis_example.dSYM/Contents/: Info.plist
25-01-10.home_refactoring/lis_example.dSYM/Contents/Resources/DWARF/: lis_example
25-01-10.home_refactoring/lis_example.dSYM/Contents/Resources/Relocations/aarch64/: lis_example.yml
25-12-3.class_menu/: build.sh  example  menu  menu_func.cpp
25-12-6.menu/: menu  menu_func.cpp  menu_func.hpp  menu_items.cpp  menu_items.hpp
25-12-6.menu/menu.dSYM/Contents/Resources/DWARF/: menu
25-12-6.menu/menu.dSYM/Contents/Resources/Relocations/aarch64/: menu.yml
