# Включает поддержку rpath для macOS (для поиска динамических библиотек)
# Это нужно, чтобы при запуске исполняемых файлов на macOS динамические библиотеки искались в правильных местах.
set(CMAKE_MACOSX_RPATH ON)
# Использовать пути линковки для установки rpath
# Это позволяет автоматически добавлять пути к зависимым библиотекам в rpath, чтобы не было проблем с запуском.
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH ON)

# Минимальная требуемая версия CMake
# Гарантирует, что все используемые ниже команды поддерживаются вашей версией CMake.
cmake_minimum_required(VERSION 3.10)

# Включить поддержку тестирования (CTest)
# Это позволяет использовать встроенные средства тестирования CMake (например, команду ctest).
enable_testing()

# Имя и версия главного проекта
# Здесь задаётся имя всего проекта, чтобы CMake мог правильно организовать структуру сборки и пространства имён.
project(projects)

# Найти установленный GoogleTest (или завершить с ошибкой)
# find_package ищет установленную библиотеку GoogleTest. Если она не найдена, сборка завершится с ошибкой.
# Это делается здесь, чтобы тесты во всех подпроектах могли использовать GoogleTest.
find_package(GTest REQUIRED)

# Имя библиотеки сортировки, используется в sort/CMakeLists.txt
# Эта переменная нужна для унификации имени библиотеки сортировки во всех подпроектах.
# Устанавливается здесь, чтобы была доступна в sort и тестах.
set(SORTING_LIB_NAME wertyuio)

# Добавить подпроект obuchaika (ищет CMakeLists.txt в папке obuchaika)
# add_subdirectory подключает подпроект, чтобы его можно было собирать вместе с основным проектом.
# Делается здесь, чтобы все подпроекты собирались централизованно.
add_subdirectory(obuchaika)

# Добавить подпроект sort (ищет CMakeLists.txt в папке sort)
# Аналогично, подключаем модуль сортировки, чтобы его библиотека и тесты были частью общей сборки.
add_subdirectory(sort)

# Добавить исходники GoogleTest как подпроект
# Если GoogleTest не установлен в системе, этот вызов позволит собрать его из исходников, лежащих в папке lib/googletest.
# Это делается здесь, чтобы все тесты в проекте могли использовать одну и ту же версию GoogleTest.
add_subdirectory(lib/googletest/)

