# Указываем минимальную версию CMake, чтобы гарантировать поддержку нужных команд и синтаксиса
cmake_minimum_required(VERSION 3.10)

# Описываем отдельный подпроект 'obuchaika'. Это позволяет изолировать сборку меню от других частей проекта
project(obuchaika)

# Создаём исполняемый файл с именем 'menu' из указанных исходников
# add_executable вызывается именно здесь, потому что исходники меню лежат в этом подпроекте
# Это позволяет собирать меню независимо от других частей проекта
add_executable(menu
    menu.cpp
    menu_func.cpp
    menu_items.cpp
)

# Указываем директорию с заголовочными файлами для исполняемого файла menu
# PRIVATE — путь нужен только для этого исполняемого файла, не для других модулей
# Это делается здесь, потому что только obuchaika знает, где лежат его заголовки
# Если бы это делали в другом месте, другие части проекта могли бы не найти нужные файлы

target_include_directories(menu PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

# Настраиваем установку исполняемого файла menu в папку bin при выполнении команды make install
# Это делается здесь, чтобы только этот подпроект отвечал за установку своего исполняемого файла
install(TARGETS menu RUNTIME DESTINATION bin)
