# Указываем минимальную версию CMake, чтобы гарантировать поддержку нужных команд и синтаксиса
cmake_minimum_required(VERSION 3.10)

# Описываем отдельный подпроект 'sorting'. Это важно для изоляции логики сортировки и её тестов от других частей проекта
project(sorting)

# Подключаем подпапку test, чтобы собрать и зарегистрировать тесты для сортировки
# Это делается именно здесь, потому что тесты логически относятся к модулю сортировки и используют его библиотеку
add_subdirectory(test)

# Создаём статическую библиотеку с именем из переменной SORTING_LIB_NAME (например, wertyuio)
# Библиотека нужна, чтобы код сортировки можно было переиспользовать в разных частях проекта (например, в тестах и основном приложении)
# add_library вызывается именно здесь, потому что исходники сортировки лежат в этом подпроекте
add_library(${SORTING_LIB_NAME} STATIC
    ${PROJECT_SOURCE_DIR}/src/bubble_sort.cpp
)

# Явно указываем, какие исходники и заголовочные файлы входят в библиотеку
# PRIVATE — исходники используются только внутри библиотеки
# PUBLIC — заголовочные файлы нужны и другим модулям, которые будут использовать библиотеку
# Это делается здесь, чтобы обеспечить правильную видимость и инкапсуляцию кода
# (если бы это делали в другом месте, могли бы возникнуть проблемы с доступностью функций сортировки)
target_sources(${SORTING_LIB_NAME}
    PRIVATE
        ${PROJECT_SOURCE_DIR}/src/bubble_sort.cpp
    PUBLIC
        ${PROJECT_SOURCE_DIR}/src/bubble_sort.hpp
)    

# Указываем директорию с заголовочными файлами, чтобы другие проекты могли подключать библиотеку сортировки
# PUBLIC — значит, путь будет виден и другим модулям, которые используют эту библиотеку
# Это делается здесь, потому что только этот подпроект знает, где лежат его заголовки
# Если бы это делали в другом месте, другие части проекта могли бы не найти нужные файлы

 target_include_directories(${SORTING_LIB_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/src
)

